--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html class="">
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
+    <title>WH3 Mod Manager</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="max-w-full mx-[5%] dark:bg-slate-800">
+    <div id="root" class=""></div>
   </body>
 </html>
