--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>WH3 Mod Manager</title>
   </head>
-  <body class="dark:bg-slate-800">
+  <body id="body" class="dark:bg-slate-800">
     <div id="root" class=""></div>
   </body>
 </html>
