--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <title>WH3 Mod Manager</title>
   </head>
-  <body id="body" class="dark dark:bg-slate-800 font-light">
+  <body
+    id="body"
+    class="dark dark:bg-slate-800 font-light scrollbar scrollbar-track-gray-700 scrollbar-thumb-blue-700"
+  >
     <div id="root" class=""></div>
   </body>
 </html>
