--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,12 @@
   </head>
   <body
     id="body"
-    class="dark dark:bg-slate-800 font-light scrollbar scrollbar-track-gray-700 scrollbar-thumb-blue-700"
+    class="
+      dark
+      dark:bg-slate-800
+      font-light
+      scrollbar scrollbar-track-gray-700 scrollbar-thumb-blue-700
+    "
   >
     <div id="root" class=""></div>
   </body>
