layout changes so document scrollbar doesn't go under the topbar

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <title>WH3 Mod Manager</title>
   </head>
-  <body
-    id="body"
-    class="dark dark:bg-slate-800 font-light scrollbar scrollbar-track-gray-700 scrollbar-thumb-blue-700"
-  >
+  <body id="body" class="dark dark:bg-slate-800 font-light overflow-hidden">
     <div id="root" class=""></div>
   </body>
 </html>
